# rust_backend

./: .gitignore  Cargo.toml  README.md  init.sql
src/: main.rs
src/models/: account.rs  db.rs  mod.rs
src/models/entities/: accounts.rs  mod.rs  prelude.rs
src/routes/: account.rs
