[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]}
chrono = { version = "0.4.24", feature = ["serde"]}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
password-hash = "0.5.0"

sea-orm = { version = "^0.11.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json" ] }
dotenvy = "0.15.7"